--- a/gangneung_olympic_coffee/src/main/webapp/WEB-INF/web.xml
+++ b/gangneung_olympic_coffee/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>CharacterEncodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
 
 	<servlet>
@@ -37,7 +37,7 @@
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
 
 </web-app>
