--- a/gangneung_olympic_coffee/pom.xml
+++ b/gangneung_olympic_coffee/pom.xml
@@ -75,6 +75,11 @@
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-taglibs</artifactId>
 		    <version>4.2.2.RELEASE</version>
-		</dependency>   
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.1</version>
+		</dependency>
 		</dependencies>	
  </project>
