--- a/gangneung_olympic_coffee/pom.xml
+++ b/gangneung_olympic_coffee/pom.xml
@@ -81,5 +81,16 @@
 			<artifactId>javax.mail-api</artifactId>
 			<version>1.5.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.5.0</version>
+		</dependency>
 	</dependencies>	
  </project>
